<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    
    <com.example.fragment.TitleLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        </com.example.fragment.TitleLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <Button 
            android:id="@+id/totalrequeste"
            android:layout_width="match_parent"
        	android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_blue_selector"
            android:text="@string/totalrequest"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        
         <Button 
            android:layout_width="match_parent"
        	android:layout_height="50dp"            
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_blue_selector"
            android:text="@string/example"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        
            
          <Button 
            android:layout_width="match_parent"
        	android:layout_height="50dp"           
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_blue_selector"
            android:text="@string/frequentwords"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
